--- a/css/text_colors_xterm.css
+++ b/css/text_colors_xterm.css
@@ -8,93 +8,128 @@
 */
 
 .SGR30 {
-  color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
 }
 
 .SGR31 {
-  color: rgb(205, 0, 0);
+    color: rgb(205, 0, 0);
 }
 
 .SGR32 {
-  color: rgb(0, 205, 0);
+    color: rgb(0, 205, 0);
 }
 
 .SGR33 {
-  color: rgb(205, 205, 0);
+    color: rgb(205, 205, 0);
 }
 
 .SGR34 {
-  color: rgb(0, 0, 205);
+    color: rgb(0, 0, 205);
 }
 
 .SGR35 {
-  color: rgb(205, 0, 205);
+    color: rgb(205, 0, 205);
 }
 
 .SGR36 {
-  color: rgb(0, 205, 205);
+    color: rgb(0, 205, 205);
 }
 
 .SGR37 {
-  color: rgb(229, 229, 229);
+    color: rgb(229, 229, 229);
 }
 
 .SGR41 {
-  background-color: rgb(205, 0, 0);
+    background-color: rgb(205, 0, 0);
 }
 
 .SGR42 {
-  background-color: rgb(0, 205, 0);
+    background-color: rgb(0, 205, 0);
 }
 
 .SGR43 {
-  background-color: rgb(205, 205, 0);
+    background-color: rgb(205, 205, 0);
 }
 
 .SGR44 {
-  background-color: rgb(0, 0, 238);
+    background-color: rgb(0, 0, 238);
 }
 
 .SGR45 {
-  background-color: rgb(205, 0, 205);
+    background-color: rgb(205, 0, 205);
 }
 
 .SGR46 {
-  background-color: rgb(0, 205, 205);
+    background-color: rgb(0, 205, 205);
 }
 
 .SGR47 {
-  background-color: rgb(229, 229, 229);
+    background-color: rgb(229, 229, 229);
 }
 
 .SGR130 {
-  color: rgb(127, 127, 127);
+    color: rgb(127, 127, 127);
 }
 
 .SGR131 {
-  color: rgb(255, 0, 0);
+    color: rgb(255, 0, 0);
 }
 
 .SGR132 {
-  color: rgb(0, 255, 0);
+    color: rgb(0, 255, 0);
 }
 
 .SGR133 {
-  color: rgb(255, 255, 0);
+    color: rgb(255, 255, 0);
 }
 
 .SGR134 {
-  color: rgb(92, 92, 255);
+    color: rgb(92, 92, 255);
 }
 
 .SGR135 {
-  color: rgb(255, 0, 255);
+    color: rgb(255, 0, 255);
 }
 
 .SGR136 {
-  color: rgb(0, 255, 255);
+    color: rgb(0, 255, 255);
 }
 
 .SGR137 {
-  color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
+}
+
+
+/* iCE Colors (high intensity backgrounds) */
+
+.SGR140 {
+    background-color: rgb(127, 127, 127);
+}
+
+.SGR141 {
+    background-color: rgb(255, 0, 0);
+}
+
+.SGR142 {
+    background-color: rgb(0, 255, 0);
+}
+
+.SGR143 {
+    background-color: rgb(255, 255, 0);
+}
+
+.SGR144 {
+    background-color: rgb(92, 92, 255);
+}
+
+.SGR145 {
+    background-color: rgb(255, 0, 255);
+}
+
+.SGR146 {
+    background-color: rgb(0, 255, 255);
+}
+
+.SGR147 {
+    background-color: rgb(255, 255, 255);
 }
