--- a/css/retrotxt.css
+++ b/css/retrotxt.css
@@ -12,140 +12,146 @@ options*.css for the styling of the Options dialogue.
 
 /* fonts */
 
+
+/* csslint ignore:start */
+
 @font-face {
-    font-family: amiga;
+    font-family: 'amiga';
     src: url('../fonts/amiga/amiga4ever.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: appleii;
+    font-family: 'appleii';
     src: url('../fonts/appleii/PrintChar21.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: atarist;
+    font-family: 'atarist';
     src: url('../fonts/atari_st/AtariST8x16SystemFont.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: bios;
+    font-family: 'bios';
     src: url('../fonts/ms_dos/PxPlus_IBM_BIOS.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: bios-2x;
+    font-family: 'bios-2x';
     src: url('../fonts/ms_dos/PxPlus_IBM_BIOS-2x.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: bios-2y;
+    font-family: 'bios-2y';
     src: url('../fonts/ms_dos/PxPlus_IBM_BIOS-2y.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: c64;
+    font-family: 'c64';
     src: url('../fonts/commodore64/fonts/C64_Pro_Mono-STYLE.woff2') format('woff2'), url('../fonts/commodore64/fonts/C64_Pro_Mono-STYLE.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: cga;
+    font-family: 'cga';
     src: url('../fonts/ms_dos/PxPlus_IBM_CGA.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: cga-2y;
+    font-family: 'cga-2y';
     src: url('../fonts/ms_dos/PxPlus_IBM_CGA-2y.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: cgathin;
+    font-family: 'cgathin';
     src: url('../fonts/ms_dos/PxPlus_IBM_CGAthin.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: cgathin-2y;
+    font-family: 'cgathin-2y';
     src: url('../fonts/ms_dos/PxPlus_IBM_CGAthin-2y.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: pc1512;
+    font-family: 'pc1512';
     src: url('../fonts/ms_dos/PxPlus_AmstradPC1512.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: pc1512-2y;
+    font-family: 'pc1512-2y';
     src: url('../fonts/ms_dos/PxPlus_AmstradPC1512-2y.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: ega8;
+    font-family: 'ega8';
     src: url('../fonts/ms_dos/PxPlus_IBM_EGA8.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: ega8-2x;
+    font-family: 'ega8-2x';
     src: url('../fonts/ms_dos/PxPlus_IBM_EGA8-2x.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: ega9;
+    font-family: 'ega9';
     src: url('../fonts/ms_dos/PxPlus_IBM_EGA9.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: ega9-2x;
+    font-family: 'ega9-2x';
     src: url('../fonts/ms_dos/PxPlus_IBM_EGA9-2x.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: mda;
+    font-family: 'mda';
     src: url('../fonts/ms_dos/PxPlus_IBM_MDA.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: tandynewtv;
+    font-family: 'tandynewtv';
     src: url('../fonts/ms_dos/PxPlus_TandyNew_TV.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: tandynewtv-2y;
+    font-family: 'tandynewtv-2y';
     src: url('../fonts/ms_dos/PxPlus_TandyNew_TV-2y.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: tandynew225;
+    font-family: 'tandynew225';
     src: url('../fonts/ms_dos/PxPlus_TandyNew_225.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: tandynew225-2y;
+    font-family: 'tandynew225-2y';
     src: url('../fonts/ms_dos/PxPlus_TandyNew_225-2y.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: vga8;
+    font-family: 'vga8';
     src: url('../fonts/ms_dos/PxPlus_IBM_VGA8.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: vga8-2x;
+    font-family: 'vga8-2x';
     src: url('../fonts/ms_dos/PxPlus_IBM_VGA8-2x.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: vga9;
+    font-family: 'vga9';
     src: url('../fonts/ms_dos/PxPlus_IBM_VGA9.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: vga9-2x;
+    font-family: 'vga9-2x';
     src: url('../fonts/ms_dos/PxPlus_IBM_VGA9-2x.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: vgalcd;
+    font-family: 'vgalcd';
     src: url('../fonts/ms_dos/PxPlus_VGA_SquarePx.ttf') format('truetype');
 }
+
+
+/* csslint ignore:end */
 
 
 /* Classes to apply fonts */
@@ -288,10 +294,10 @@ Blinking terminal prompt that works with any colour
 */
 
 .dos-cursor {
-    text-shadow: 0 0 0;
     animation: 300ms blink step-end infinite;
     -moz-animation: 300ms blink step-end infinite;
     -webkit-animation: 300ms blink step-end infinite;
+    text-shadow: 0 0 0;
 }
 
 @keyframes blink {
@@ -332,23 +338,25 @@ font color value is the invert of the background colour
 */
 
 header {
-    order: 1;
+    filter: invert(100%);
+    -webkit-filter: invert(100%);
     font-family: vgalcd;
     font-size: 1.5em;
     line-height: 1.6em;
-    text-align: left;
-    filter: invert(100%);
-    -webkit-filter: invert(100%);
+    /* csslint ignore:start */
     mix-blend-mode: difference;
+    /* csslint ignore:end */
+    order: 1;
     position: sticky;
-    width: 100%;
+    text-align: left;
     text-indent: 1em;
     top: 1em;
+    width: 100%;
 }
 
 main {
-    order: 2;
     display: inline-block;
+    order: 2;
 }
 
 main i {
@@ -357,35 +365,32 @@ main i {
 }
 
 pre {
-    border: 0em dotted green;
-    padding: 0em;
+    border: 0 dotted green;
+    padding: 0;
 }
 
 #checkErr {
-    display: none;
     background-color: rgb(255, 0, 0);
     border: 0.1em solid rgb(255, 255, 255);
     color: rgb(0, 0, 0);
+    display: none;
     font-family: "Lucida Console", Monaco, monospace;
     padding: 1em;
 }
 
 #checkErr kbd {
     /* Source: https://github.com/auth0/kbd */
-    display: inline-block;
-    border-radius: 3px;
-    padding: 0px 4px;
-    box-shadow: 1px 1px 1px #777;
-    margin: 2px;
-    font-size: small;
-    vertical-align: text-bottom;
     background: #eee;
-    font-weight: 500;
+    border-radius: 3px;
+    box-shadow: 1px 1px 1px #777;
     color: #555;
     cursor: pointer;
+    display: inline-block;
+    font-size: small;
     font-variant: small-caps;
     font-weight: 600;
-    /* This two work */
-    /* letter-spacing: 0.5px; */
     letter-spacing: 1px;
+    margin: 2px;
+    padding: 0 4px;
+    vertical-align: text-bottom;
 }
