--- a/css/text_colors_gray.css
+++ b/css/text_colors_gray.css
@@ -9,93 +9,97 @@
 */
 
 .SGR30 {
-  color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
 }
 
 .SGR31 {
-  color: rgb(44, 44, 44);
+    color: rgb(44, 44, 44);
 }
 
 .SGR32 {
-  color: rgb(147, 147, 147);
+    color: rgb(147, 147, 147);
 }
 
 .SGR33 {
-  color: rgb(191, 191, 191);
+    color: rgb(191, 191, 191);
 }
 
 .SGR34 {
-  color: rgb(23, 23, 23);
+    color: rgb(23, 23, 23);
 }
 
 .SGR35 {
-  color: rgb(67, 67, 67);
+    color: rgb(67, 67, 67);
 }
 
 .SGR36 {
-  color: rgb(170, 170, 170);
+    color: rgb(170, 170, 170);
 }
 
 .SGR37 .SGR39 {
-  color: rgb(229, 229, 229);
+    color: rgb(229, 229, 229);
+}
+
+.SGR40 {
+    background-color: rgb(0, 0, 0)
 }
 
 .SGR41 {
-  background-color: rgb(44, 44, 44);
+    background-color: rgb(44, 44, 44);
 }
 
 .SGR42 {
-  background-color: rgb(147, 147, 147);
+    background-color: rgb(147, 147, 147);
 }
 
 .SGR43 {
-  background-color: rgb(191, 191, 191);
+    background-color: rgb(191, 191, 191);
 }
 
 .SGR44 {
-  background-color: rgb(26, 26, 26);
+    background-color: rgb(26, 26, 26);
 }
 
 .SGR45 {
-  background-color: rgb(67, 67, 67);
+    background-color: rgb(67, 67, 67);
 }
 
 .SGR46 {
-  background-color: rgb(170, 170, 170);
+    background-color: rgb(170, 170, 170);
 }
 
 .SGR47 {
-  background-color: rgb(229, 229, 229);
+    background-color: rgb(229, 229, 229);
 }
 
 .SGR130 {
-  color: rgb(127, 127, 127);
+    color: rgb(127, 127, 127);
 }
 
 .SGR131 {
-  color: rgb(77, 77, 77);
+    color: rgb(77, 77, 77);
 }
 
 .SGR132 {
-  color: rgb(150, 150, 150);
+    color: rgb(150, 150, 150);
 }
 
 .SGR133 {
-  color: rgb(227, 277, 277);
+    color: rgb(227, 277, 277);
 }
 
 .SGR134 {
-  color: rgb(110, 110, 110);
+    color: rgb(110, 110, 110);
 }
 
 .SGR135 {
-  color: rgb(105, 105, 105);
+    color: rgb(105, 105, 105);
 }
 
 .SGR136 {
-  color: rgb(178, 178, 178);
+    color: rgb(178, 178, 178);
 }
 
 .SGR137 {
-  color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
 }
